fix one instance

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@ for color in colors
 
 <pre><code># import tags into your namespace
 {render, div, span, table, thead, tbody, tr, td, th, text, textarea, button, hr, iframe,
- raw, a, br, b, img, label, form, input, ul, li, h1, h2, h4, select, option, p} = window.drykup
+ raw, a, br, b, img, label, form, input, ul, li, h1, h2, h4, select, option, p} = window.onecup
 
 # define a template namespace
 $t = {}
